tests/ui/associated-types/issue-43784-associated-type.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-43784-associated-type.rs:14:18
   |
LL |     type Assoc = T;
   |                  ^ the trait `Copy` is not implemented for `T`
   |
note: required for `<T as Complete>::Assoc` to implement `Partial<T>`
  --> $DIR/issue-43784-associated-type.rs:1:11
   |
LL | pub trait Partial<X: ?Sized>: Copy {
   |           ^^^^^^^
note: required by a bound in `Complete::Assoc`
  --> $DIR/issue-43784-associated-type.rs:5:17
   |
LL |     type Assoc: Partial<Self>;
   |                 ^^^^^^^^^^^^^ required by this bound in `Complete::Assoc`
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | impl<T: std::marker::Copy> Complete for T {
   |       +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
